--- a/4.2 HTML Porfolio Project/index.html
+++ b/4.2 HTML Porfolio Project/index.html
@@ -14,7 +14,7 @@
     <h3><a href="./public/series-ranking.html">Series Ranking Project</a></h3>
     <img src="./assets/images/series.png" height="200" alt="Series Ranking List">
 
-    <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday.png" height="200" alt="Birthday Invite">
     
     <hr>
