--- a/6.1 Font Properties/font-family.html
+++ b/6.1 Font Properties/font-family.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Font Family</title>
   <style>
+
+
     #helvetica {
       font-family: Helvetica, sans-serif;
     }
@@ -32,6 +34,10 @@
     #fantasy {
       font-family: fantasy;
     }
+
+    #caveat {
+      font-family: Caveat, cursive;
+    }
   </style>
 </head>
 
@@ -43,6 +49,7 @@
   <p id="cursive">Cursive</p>
   <p id="monospace">Monospace</p>
   <p id="fantasy">Fantasy</p>
+  <p id="caveat">Caveat</p>
 
 </body>
 
